--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formidable": "^2.1.1",
+    "cors": "^2.8.5",
     "pg": "^8.10.0"
   }
 }
