--- a/view/package.json
+++ b/view/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "victory": "^36.6.10",
+    "date-fns": "^2.30.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
