--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "formidable": "^2.1.1",
     "cors": "^2.8.5",
+    "morgan": "^1.10.0",
     "pg": "^8.10.0"
   }
 }
