--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js --ignore ./view",
+    "migrate": "node-pg-migrate",
+    "migrate-and-start": "npm run migrate up && npm start",
     "lint:check": "eslint ."
   },
   "keywords": [],
@@ -27,6 +29,7 @@
     "formidable": "^2.1.1",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
+    "node-pg-migrate": "^7.7.1",
     "pg": "^8.10.0"
   }
 }
